# my-ML-class

./: .gitignore  01_myMLclass_numpy_basics.ipynb  02_myMLclass_logistic_regression.ipynb  02_myMLclass_logistic_regression_numpy.ipynb  02a_myMLclass_logistic_regression_numpy_analysis.ipynb  03_myMLclass_logistic_regression_pytorch.ipynb  README.md  representation_logistic_regression.tex
04/: 04_myMLclass_sequence_model_dinosaurs.ipynb
cpp/: 02_myMLclass_logistic_regression_numpy.cpp  CMakeLists.txt  cmake cheatsheet.txt
