cmake_minimum_required(VERSION 3.10)
project(02_myMLclass_logistic_regression_numpy)

# Set C++ Standard (optional, but recommended)
set(CMAKE_CXX_STANDARD 17)

# Add executable (your main.cpp or other source files)
add_executable(02_myMLclass_logistic_regression_numpy 02_myMLclass_logistic_regression_numpy.cpp)